--- a/examples/machine-controller.yaml
+++ b/examples/machine-controller.yaml
@@ -566,48 +566,48 @@ subjects:
     name: machine-controller
     namespace: kube-system
 ---
-apiVersion: admissionregistration.k8s.io/v1
-kind: MutatingWebhookConfiguration
-metadata:
-  name: machinedeployments.machine-controller.kubermatic.io
-webhooks:
-- name: machinedeployments.machine-controller.kubermatic.io
-  failurePolicy: Fail
-  sideEffects: None
-  admissionReviewVersions: ["v1", "v1beta1"]
-  rules:
-  - apiGroups:
-    - "cluster.k8s.io"
-    apiVersions:
-    - v1alpha1
-    operations:
-    - CREATE
-    - UPDATE
-    resources:
-    - machinedeployments
-  clientConfig:
-    service:
-      namespace: kube-system
-      name: machine-controller-webhook
-      path: /machinedeployments
-    caBundle: __admission_ca_cert__
-- name: machines.machine-controller.kubermatic.io
-  failurePolicy: Fail
-  sideEffects: None
-  admissionReviewVersions: ["v1", "v1beta1"]
-  rules:
-  - apiGroups:
-    - "cluster.k8s.io"
-    apiVersions:
-    - v1alpha1
-    operations:
-    - CREATE
-    - UPDATE
-    resources:
-    - machines
-  clientConfig:
-    service:
-      namespace: kube-system
-      name: machine-controller-webhook
-      path: /machines
-    caBundle: __admission_ca_cert__
+# apiVersion: admissionregistration.k8s.io/v1
+# kind: MutatingWebhookConfiguration
+# metadata:
+#   name: machinedeployments.machine-controller.kubermatic.io
+# webhooks:
+# - name: machinedeployments.machine-controller.kubermatic.io
+#   failurePolicy: Fail
+#   sideEffects: None
+#   admissionReviewVersions: ["v1", "v1beta1"]
+#   rules:
+#   - apiGroups:
+#     - "cluster.k8s.io"
+#     apiVersions:
+#     - v1alpha1
+#     operations:
+#     - CREATE
+#     - UPDATE
+#     resources:
+#     - machinedeployments
+#   clientConfig:
+#     service:
+#       namespace: kube-system
+#       name: machine-controller-webhook
+#       path: /machinedeployments
+#     caBundle: __admission_ca_cert__
+# - name: machines.machine-controller.kubermatic.io
+#   failurePolicy: Fail
+#   sideEffects: None
+#   admissionReviewVersions: ["v1", "v1beta1"]
+#   rules:
+#   - apiGroups:
+#     - "cluster.k8s.io"
+#     apiVersions:
+#     - v1alpha1
+#     operations:
+#     - CREATE
+#     - UPDATE
+#     resources:
+#     - machines
+#   clientConfig:
+#     service:
+#       namespace: kube-system
+#       name: machine-controller-webhook
+#       path: /machines
+#     caBundle: __admission_ca_cert__
