Enable OSM in E2E tests
Signed-off-by: Waleed Malik <ahmedwaleedmalik@gmail.com>

--- a/examples/machine-controller.yaml
+++ b/examples/machine-controller.yaml
@@ -218,6 +218,7 @@ spec:
             - -cluster-dns=10.10.10.10
             - -metrics-address=0.0.0.0:8080
             - -health-probe-address=0.0.0.0:8085
+            - -use-osm=true
             # Machines that fail to join the cluster within this timeout and
             # are owned by a MachineSet will get deleted so the MachineSet
             # controller re-creates them
@@ -260,6 +261,7 @@ spec:
             - /usr/local/bin/webhook
             - -logtostderr
             - -v=6
+            - -use-osm=true
             - -listen-address=0.0.0.0:9876
           volumeMounts:
             - name: machine-controller-admission-cert
