Add E2E test for legacy userdata
Signed-off-by: Waleed Malik <ahmedwaleedmalik@gmail.com>

--- a/examples/machine-controller.yaml
+++ b/examples/machine-controller.yaml
@@ -262,6 +262,7 @@ spec:
             - -logtostderr
             - -v=6
             - -use-osm=true
+            - -namespace=kube-system
             - -listen-address=0.0.0.0:9876
           volumeMounts:
             - name: machine-controller-admission-cert
