--- a/.prow/provider-aws.yaml
+++ b/.prow/provider-aws.yaml
@@ -42,6 +42,38 @@ presubmits:
             limits:
               memory: 6Gi
 
+  - name: pull-machine-controller-e2e-aws-legacy-userdata
+    always_run: true
+    decorate: true
+    clone_uri: "ssh://git@github.com/kubermatic/machine-controller.git"
+    labels:
+      preset-aws: "true"
+      preset-hetzner: "true"
+      preset-e2e-ssh: "true"
+      preset-rhel: "true"
+      preset-goproxy: "true"
+      preset-kind-volume-mounts: "true"
+      preset-docker-mirror: "true"
+      preset-kubeconfig-ci: "true"
+    spec:
+      containers:
+        - image: quay.io/kubermatic/build:go-1.18-node-16-kind-0.14-9
+          env:
+            - name: OPERATING_SYSTEM_MANAGER
+              value: "false"
+          command:
+            - "./hack/ci/run-e2e-tests.sh"
+          args:
+            - "TestAWSProvisioningE2E"
+          securityContext:
+            privileged: true
+          resources:
+            requests:
+              memory: 6Gi
+              cpu: 2
+            limits:
+              memory: 6Gi
+
   - name: pull-machine-controller-e2e-aws-arm
     always_run: true
     decorate: true
