--- a/test/e2e/provisioning/testdata/machinedeployment-openstack.yaml
+++ b/test/e2e/provisioning/testdata/machinedeployment-openstack.yaml
@@ -30,7 +30,7 @@ spec:
             tenantName: "<< TENANT_NAME >>"
             image: "<< OS_IMAGE >>"
             flavor: "m1.tiny"
-            floatingIpPool: ""
+            floatingIpPool: "ext-net"
             domainName: "<< DOMAIN_NAME >>"
             region: "<< REGION >>"
             network: "<< NETWORK_NAME >>"
