Fix Equinix Metal and KubeVirt E2E tests
Signed-off-by: Marko Mudrinić <mudrinic.mare@gmail.com>

--- a/test/e2e/provisioning/testdata/machinedeployment-kubevirt.yaml
+++ b/test/e2e/provisioning/testdata/machinedeployment-kubevirt.yaml
@@ -28,7 +28,7 @@ spec:
           cloudProviderSpec:
             storageClassName: longhorn
             pvcSize: "10Gi"
-            sourceURL: http://10.244.1.19/<< OS_NAME >>.img
+            sourceURL: http://image-repo.kube-system.svc.cluster.local/images/<< OS_NAME >>.img
             cpus: "1"
             memory: "4096M"
             dnsPolicy: "None"
