--- a/examples/operating-system-manager.yaml
+++ b/examples/operating-system-manager.yaml
@@ -1077,8 +1077,8 @@ spec:
       serviceAccountName: operating-system-manager-webhook
       containers:
         # TODO: Update this to a semver tag before release.
-        # - image: quay.io/kubermatic/operating-system-manager:45600227d69e6a105c34ba70ba641e5cd071887e # Ref: https://github.com/kubermatic/operating-system-manager/commit/45600227d69e6a105c34ba70ba641e5cd071887e
-        - image: ahmedwaleedmalik/osm:v2
+        # - image: quay.io/kubermatic/operating-system-manager:952f1cd42007d6770b8e2805b0e18247377b14bb # Ref: https://github.com/kubermatic/operating-system-manager/commit/952f1cd42007d6770b8e2805b0e18247377b14bb
+        - image: quay.io/kubermatic/operating-system-manager:952f1cd42007d6770b8e2805b0e18247377b14bb
           imagePullPolicy: IfNotPresent
           name: webhook
           command:
@@ -1379,8 +1379,8 @@ spec:
     spec:
       serviceAccountName: operating-system-manager
       containers:
-        # - image: quay.io/kubermatic/operating-system-manager:45600227d69e6a105c34ba70ba641e5cd071887e # Ref: https://github.com/kubermatic/operating-system-manager/commit/45600227d69e6a105c34ba70ba641e5cd071887e
-        - image: ahmedwaleedmalik/osm:v2
+        # - image: quay.io/kubermatic/operating-system-manager:952f1cd42007d6770b8e2805b0e18247377b14bb # Ref: https://github.com/kubermatic/operating-system-manager/commit/952f1cd42007d6770b8e2805b0e18247377b14bb
+        - image: quay.io/kubermatic/operating-system-manager:952f1cd42007d6770b8e2805b0e18247377b14bb
           imagePullPolicy: IfNotPresent
           name: operating-system-manager
           command:
