set IPv6AcceptRA=true for Flatcar
Fixes https://github.com/flatcar-linux/Flatcar/issues/384

--- a/pkg/userdata/flatcar/testdata/cloud-init_v1.23.5.yaml
+++ b/pkg/userdata/flatcar/testdata/cloud-init_v1.23.5.yaml
@@ -299,6 +299,12 @@ write_files:
     fi
 
 
+- path: "/etc/systemd/network/zz-default.network.d/ipv6-fix.conf"
+  permissions: "0755"
+  content: |
+    [Network]
+    IPv6AcceptRA=true
+
 - path: /etc/kubernetes/bootstrap-kubelet.conf
   permissions: "0400"
   content: |
