inline router advertisement setting; add comments

--- a/pkg/userdata/flatcar/testdata/cloud-init_v1.24.0.yaml
+++ b/pkg/userdata/flatcar/testdata/cloud-init_v1.24.0.yaml
@@ -301,6 +301,9 @@ write_files:
 - path: "/etc/systemd/network/zz-default.network.d/ipv6-fix.conf"
   permissions: "0755"
   content: |
+    # IPv6 autoconfiguration doesn't work out of the box on some versions of Flatcar
+    # so we enable IPv6 Router Advertisement here.
+    # See for details https://github.com/flatcar-linux/Flatcar/issues/384
     [Network]
     IPv6AcceptRA=true
 
