--- a/examples/gce-machinedeployment.yaml
+++ b/examples/gce-machinedeployment.yaml
@@ -7,7 +7,10 @@ metadata:
   namespace: kube-system
 type: Opaque
 stringData:
-  serviceAccount: "<< GOOGLE_SERVICE_ACCOUNT >>"
+  # The secret should contain the plaintext service account, but since
+  # it's a secret, for this YAML file it needs to be base64-encoded.
+  serviceAccount: "<< GOOGLE_SERVICE_ACCOUNT_BASE64 >>"
+
 ---
 apiVersion: "cluster.k8s.io/v1alpha1"
 kind: MachineDeployment
