--- a/pkg/userdata/ubuntu/testdata/openstack-dualstack.yaml
+++ b/pkg/userdata/ubuntu/testdata/openstack-dualstack.yaml
@@ -259,6 +259,11 @@ write_files:
     # get the default interface IP address
     DEFAULT_IFC_IP=$(ip -o route get  1 | grep -oP "src \K\S+")
     DEFAULT_IFC_IP6=$(ip -o -6 route get  1:: | grep -oP "src \K\S+")
+    if [ -z "${DEFAULT_IFC_IP6}" ]
+    then
+      echodate "Failed to get IPv6 address for the default route interface"
+      exit 1
+    fi
     DEFAULT_IFC_IP=$DEFAULT_IFC_IP,$DEFAULT_IFC_IP6
 
     # get the full hostname
