Remove references to proxy in Nutanix e2e testing
Signed-off-by: Marvin Beckers <marvin@kubermatic.com>

--- a/.prow/provider-nutanix.yaml
+++ b/.prow/provider-nutanix.yaml
@@ -14,10 +14,7 @@
 
 presubmits:
   - name: pull-machine-controller-e2e-nutanix
-    optional: true
-    always_run: false
-    # TODO uncomment this when Nutanix is in a working condition
-    #run_if_changed: "(pkg/cloudprovider/provider/nutanix/)"
+    run_if_changed: "(pkg/cloudprovider/provider/nutanix/)"
     decorate: true
     clone_uri: "ssh://git@github.com/kubermatic/machine-controller.git"
     labels:
