--- a/examples/operating-system-manager.yaml
+++ b/examples/operating-system-manager.yaml
@@ -1076,6 +1076,7 @@ spec:
     spec:
       serviceAccountName: operating-system-manager-webhook
       containers:
+        # TODO: Update this to a semver tag before release.
         - image: quay.io/kubermatic/operating-system-manager:ea2250874bbcea46ad956cbba8972be7ffdf9ce2
           imagePullPolicy: IfNotPresent
           name: webhook
@@ -1377,6 +1378,7 @@ spec:
     spec:
       serviceAccountName: operating-system-manager
       containers:
+        # TODO: Update this to a semver tag before release.
         - image: quay.io/kubermatic/operating-system-manager:ea2250874bbcea46ad956cbba8972be7ffdf9ce2
           imagePullPolicy: IfNotPresent
           name: operating-system-manager
