--- a/test/e2e/provisioning/testdata/machinedeployment-vsphere-static-ip.yaml
+++ b/test/e2e/provisioning/testdata/machinedeployment-vsphere-static-ip.yaml
@@ -3,6 +3,8 @@ kind: MachineDeployment
 metadata:
   name: << MACHINE_NAME >>
   namespace: kube-system
+  annotations:
+    k8c.io/operating-system-profile: osp-<< OS_NAME >>
 spec:
   replicas: 1
   strategy:
@@ -41,11 +43,11 @@ spec:
             disableAutoUpdate: true
             rhsmOfflineToken: "<< REDHAT_SUBSCRIPTIONS_OFFLINE_TOKEN >>"
           network:
-           cidr: "192.168.44.<< IP_OCTET >>/20"
-           gateway: "192.168.32.1"
-           dns:
-             servers:
-              - "192.168.32.1"
-              - "8.8.8.8"
+            cidr: "192.168.44.<< IP_OCTET >>/20"
+            gateway: "192.168.32.1"
+            dns:
+              servers:
+                - "192.168.32.1"
+                - "8.8.8.8"
       versions:
         kubelet: "<< KUBERNETES_VERSION >>"
