--- a/examples/gce-machinedeployment.yaml
+++ b/examples/gce-machinedeployment.yaml
@@ -69,6 +69,8 @@ spec:
             assignPublicIPAddress: true
             customImage: "myCustomImage"
             disableMachineServiceAccount: false
+            enableNestedVirtualization: false
+            minCpuPlatform: "Intel Haswell"
           # Can be 'ubuntu' or 'rhel'
           operatingSystem: "ubuntu"
           operatingSystemSpec:
