adjust minCPUPlatform name to linter rules
Signed-off-by: Marcin Franczyk <marcin0franczyk@gmail.com>

--- a/examples/gce-machinedeployment.yaml
+++ b/examples/gce-machinedeployment.yaml
@@ -70,7 +70,7 @@ spec:
             customImage: "myCustomImage"
             disableMachineServiceAccount: false
             enableNestedVirtualization: false
-            minCpuPlatform: "Intel Haswell"
+            minCPUPlatform: "Intel Haswell"
           # Can be 'ubuntu' or 'rhel'
           operatingSystem: "ubuntu"
           operatingSystemSpec:
