Add an option to enable Guest OS Features at GCP
Signed-off-by: Marcin Franczyk <marcin0franczyk@gmail.com>

--- a/examples/gce-machinedeployment.yaml
+++ b/examples/gce-machinedeployment.yaml
@@ -71,6 +71,9 @@ spec:
             disableMachineServiceAccount: false
             enableNestedVirtualization: false
             minCPUPlatform: "Intel Haswell"
+            guestOSFeatures:
+              - "VIRTIO_SCSI_MULTIQUEUE"
+              - "GVNIC"
           # Can be 'ubuntu' or 'rhel'
           operatingSystem: "ubuntu"
           operatingSystemSpec:
