--- a/.prow/e2e-features.yaml
+++ b/.prow/e2e-features.yaml
@@ -106,7 +106,7 @@ presubmits:
               memory: 6Gi
 
   - name: pull-machine-controller-e2e-deployment-upgrade
-    always_run: true
+    always_run: false
     decorate: true
     clone_uri: "ssh://git@github.com/kubermatic/machine-controller.git"
     labels:
